move to php 7.1, major cleanup, clean metrics after they were pushed to the server

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
 			"email": "lazyshot@gmail.com"
 		}
 	],
+	"require": {
+		"php": "^7.1"
+	},
 	"autoload": {
 		"psr-4": {
 			"Prometheus\\": "src/"
