--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
 	"name": "lazyshot/prometheus-php",
 	"description": "Prometheus metrics client for PHP",
-	"version": "0.2.0",
-	"license": "apache2",
+	"version": "0.3.0",
+	"license": "MIT",
 	"authors": [
 		{
 			"name": "Bryan Peterson",
